--- a/androidVoip/src/main/res/layout/toolbar_settings.xml
+++ b/androidVoip/src/main/res/layout/toolbar_settings.xml
@@ -43,33 +43,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/title_calls"
+                    android:text="@string/title_settings"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/profile_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/statusText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:textSize="11sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/statusCircle"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Аккаунт активен" />
-
-                <View
-                    android:id="@+id/statusCircle"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/shape_circle"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.Toolbar>
