--- a/androidVoip/src/main/res/navigation/catalog.xml
+++ b/androidVoip/src/main/res/navigation/catalog.xml
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_calls"
-        android:name="ru.mephi.voip.ui.calls.CallerFragment"
+        android:name="ru.mephi.voip.ui.caller.CallerFragment"
         android:label="CallsFragment" />
     <fragment
         android:id="@+id/navigation_profile"
