--- a/androidVoip/src/main/res/drawable/shape_circle.xml
+++ b/androidVoip/src/main/res/drawable/shape_circle.xml
@@ -1,7 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:shape="oval">
-    <solid
-        tools:color="#F44336"/>
-</shape>
+    android:shape="oval" />
