--- a/androidVoip/src/main/res/menu/bottom_nav_menu.xml
+++ b/androidVoip/src/main/res/menu/bottom_nav_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/calls"
+        android:id="@+id/caller"
         android:icon="@drawable/ic_baseline_call_24"
         android:title="@string/title_calls" />
 
