--- a/androidVoip/src/main/res/layout/fragment_catalog.xml
+++ b/androidVoip/src/main/res/layout/fragment_catalog.xml
@@ -27,11 +27,11 @@
                 tools:listitem="@layout/item_recycler_breadcrumb" />
 
             <ProgressBar
-                android:visibility="gone"
                 android:id="@+id/progressBar"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal|center_vertical" />
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:visibility="gone" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv"
