--- a/androidVoip/src/main/res/layout/item_call_record.xml
+++ b/androidVoip/src/main/res/layout/item_call_record.xml
@@ -1,39 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingVertical="10dp">
+    android:layout_gravity="center"
+    android:padding="10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="40dp"
-        android:orientation="vertical">
+        android:layout_marginStart="10dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/sip_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:gravity="start"
             android:maxHeight="150dp"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@id/block_date_and_status"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Portnov M D" />
 
         <LinearLayout
             android:id="@+id/block_date_and_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/is_incoming"
@@ -53,10 +50,9 @@
                 android:layout_gravity="center"
                 android:textColor="@color/colorAccent"
                 android:textSize="14sp"
-                tools:text="19:25 Aug" />
+                tools:text="11 Aug 2022 19:25" />
         </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/sip_number"
@@ -67,12 +63,20 @@
         android:maxHeight="150dp"
         android:paddingHorizontal="20dp"
         android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/call"
+        app:layout_constraintLeft_toRightOf="@id/info"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="09025" />
 
     <ImageButton
         android:id="@+id/call"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/rounded_corners_transparent"
-        android:src="@drawable/ic_baseline_dialer_sip_24" />
-</LinearLayout>
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_baseline_dialer_sip_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
