--- a/androidVoip/src/main/res/drawable/ic_baseline_add_to_home_screen_24.xml
+++ b/androidVoip/src/main/res/drawable/ic_baseline_add_to_home_screen_24.xml
@@ -6,6 +6,6 @@
     android:tint="?attr/colorControlNormal"
     android:autoMirrored="true">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+      android:fillColor="@android:color/black"
+      android:pathData="M18,1.01L8,1c-1.1,0 -2,0.9 -2,2v3h2V5h10v14H8v-1H6v3c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V3c0,-1.1 -0.9,-1.99 -2,-1.99zM10,15h2V8H5v2h3.59L3,15.59 4.41,17 10,11.41z"/>
 </vector>
