--- a/androidVoip/src/main/res/navigation/profile.xml
+++ b/androidVoip/src/main/res/navigation/profile.xml
@@ -15,5 +15,9 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="ru.mephi.voip.ui.settings.SettingsFragment"
-        android:label="SettingsFragment" />
+        android:label="SettingsFragment">
+        <action
+            android:id="@+id/action_navigation_settings_to_profileFragment"
+            app:destination="@id/profile" />
+    </fragment>
 </navigation>
