--- a/androidVoip/src/main/res/values/styles.xml
+++ b/androidVoip/src/main/res/values/styles.xml
@@ -1,7 +1,5 @@
 <resources>
 
-    <!--    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
-<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorBlack</item>
@@ -9,13 +7,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
-        <item name="windowActionBar">false</item>
+<!--        <item name="windowActionBar">true</item>-->
         <item name="windowNoTitle">true</item>
     </style>
-
-    <style name="MyActionBar" parent="Widget.AppCompat.ActionBar">
-        <item name="contentInsetStart">0dp</item>
-        <item name="contentInsetEnd">0dp</item>
-    </style>
-
 </resources>
