--- a/androidVoip/src/main/res/layout/item_call_record.xml
+++ b/androidVoip/src/main/res/layout/item_call_record.xml
@@ -21,6 +21,7 @@
             android:id="@+id/sip_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:gravity="start"
             android:maxHeight="150dp"
             android:textSize="25sp"
@@ -38,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:gravity="center"
                 android:maxHeight="50dp"
                 android:src="@drawable/ic_baseline_call_received_24"
@@ -59,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:gravity="center"
         android:maxHeight="150dp"
         android:paddingHorizontal="20dp"
@@ -73,7 +76,7 @@
         android:id="@+id/call"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@android:color/transparent"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_baseline_dialer_sip_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
