--- a/androidVoip/src/main/res/layout/toolbar_catalog.xml
+++ b/androidVoip/src/main/res/layout/toolbar_catalog.xml
@@ -57,6 +57,33 @@
                         android:showAsAction="always|collapseActionView"
                         app:queryBackground="@android:color/transparent" />
 
+<!--                    <RadioGroup-->
+<!--                        android:id="@+id/switch_search_type"-->
+<!--                        android:layout_width="40dp"-->
+<!--                        android:layout_height="40dp"-->
+<!--                        android:layout_marginLeft="50dp"-->
+<!--                        android:background="@color/colorPrimaryDark"-->
+<!--                        android:checkedButton="@+id/offer"-->
+<!--                        android:orientation="horizontal">-->
+
+<!--                        <RadioButton-->
+<!--                            android:id="@+id/units"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:background="@drawable/toggle_widget_background"-->
+<!--                            android:button="@drawable/ic_toggle_off" />-->
+
+<!--                        <RadioButton-->
+<!--                            android:id="@+id/users"-->
+<!--                            android:layout_width="40dp"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:layout_marginTop="1dp"-->
+<!--                            android:layout_marginRight="1dp"-->
+<!--                            android:layout_marginBottom="1dp"-->
+<!--                            android:background="@drawable/toggle_widget_background"-->
+<!--                            android:button="@drawable/ic_toggle_on" />-->
+<!--                    </RadioGroup>-->
+
                     <com.polyak.iconswitch.IconSwitch
                         android:id="@+id/switch_search_type"
                         android:layout_width="wrap_content"
