androidApp: added call status snack bar

--- a/androidVoip/src/main/res/layout/fragment_caller.xml
+++ b/androidVoip/src/main/res/layout/fragment_caller.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
@@ -12,6 +13,14 @@
         <include
             android:id="@+id/toolbar_caller"
             layout="@layout/toolbar_caller" />
+
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/compose_status_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <FrameLayout
             android:layout_width="match_parent"
