--- a/androidVoip/src/main/res/layout/fragment_caller.xml
+++ b/androidVoip/src/main/res/layout/fragment_caller.xml
@@ -15,28 +15,14 @@
             layout="@layout/toolbar_caller" />
 
         <androidx.compose.ui.platform.ComposeView
-            android:id="@+id/compose_status_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <FrameLayout
+            android:id="@+id/compose_caller_screen"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:animateLayoutChanges="true">
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/toolbar_caller"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
-            <androidx.compose.ui.platform.ComposeView
-                android:id="@+id/compose_call_history"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <androidx.compose.ui.platform.ComposeView
-                android:id="@+id/num_pad_compose"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom" />
-        </FrameLayout>
     </LinearLayout>
 </layout>
