--- a/androidVoip/src/main/res/layout/fragment_caller.xml
+++ b/androidVoip/src/main/res/layout/fragment_caller.xml
@@ -1,28 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:context=".ui.profile.ProfileFragment">
-
-        <include
-            android:id="@+id/toolbar_caller"
-            layout="@layout/toolbar_caller" />
-
-        <androidx.compose.ui.platform.ComposeView
-            android:id="@+id/compose_caller_screen"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/toolbar_caller"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-    </LinearLayout>
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_caller_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </layout>
