--- a/androidVoip/src/main/res/values/styles.xml
+++ b/androidVoip/src/main/res/values/styles.xml
@@ -1,14 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorBlack</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar" parent="AppTheme">
-        <!--        <item name="windowActionBar">true</item>-->
-        <item name="windowNoTitle">true</item>
     </style>
 </resources>
