--- a/androidVoip/src/main/res/values/theme.xml
+++ b/androidVoip/src/main/res/values/theme.xml
@@ -7,4 +7,10 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
+    <style name="Theme.SplashVoIP" parent="Theme.SplashScreen">
+        <item name="postSplashScreenTheme">@style/Theme.VoIP</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash_anim_foreground</item>
+    </style>
+
 </resources>
