--- a/androidVoip/src/main/res/values/theme.xml
+++ b/androidVoip/src/main/res/values/theme.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <style name="Theme.VoIP" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:statusBarColor">#FFFDFBFF</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
